decoder button fix

--- a/base64Decoder.html
+++ b/base64Decoder.html
@@ -8,7 +8,7 @@
 
   <link rel="stylesheet" href="css/style.css">
 
-  <script type="text/javascript" defer src="./js/base64.js" ></script>
+  <script type="text/javascript" defer src="./js/base64decode.js" ></script>
 
 
 </head>
