Encoder-Basic-Complete

--- a/encoderDecoder.html
+++ b/encoderDecoder.html
@@ -22,10 +22,10 @@
           <a href="./encoderDecoder.html">URL/Encoder Decoder</a>
           <a href="./base64Encoder.html">Base64 Encoder</a>
           <a href="./base64Decoder.html">Base64 Decoder</a>
-          <a href="#">MD-5 Hash Generator</a>
-          <a href="#">SHA-1 Hash Generator</a>
-          <a href="#">SHA-256 Hash Generator</a>
-          <a href="#">SHA-512 Generator</a>
+          <a href="./md5Hash.html">MD-5 Hash Generator</a>
+          <a href="./sha1.html">SHA-1 Hash Generator</a>
+          <a href="./sha256.html">SHA-256 Hash Generator</a>
+          <a href="./sha512.html">SHA-512 Generator</a>
         </div>
       </div>
       <a href="#news">Color Converters</a>
