--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
           <a href="./encoderDecoder.html">URL/Encoder Decoder</a>
           <a href="./base64Encoder.html">Base64 Encoder</a>
           <a href="./base64Decoder.html">Base64 Decoder</a>
-          <a href="#">MD-5 Hash Generator</a>
-          <a href="#">SHA-1 Hash Generator</a>
-          <a href="#">SHA-256 Hash Generator</a>
-          <a href="#">SHA-512 Generator</a>
+          <a href="./md5Hash.html">MD-5 Hash Generator</a>
+          <a href="./sha1.html">SHA-1 Hash Generator</a>
+          <a href="./sha256.html">SHA-256 Hash Generator</a>
+          <a href="./sha512.html">SHA-512 Generator</a>
         </div>
       </div>
       <a href="#news">Color Converters</a>
@@ -31,7 +31,7 @@
       <a href="#news">String Utilities</a>
     </div>
   </div>
-<h1>HOME PAGE</h1>
+<h1>Utility Apps</h1>
 
 </body>
 </html>
