Add number base

--- a/md5Hash.html
+++ b/md5Hash.html
@@ -28,7 +28,7 @@
       <a href="#news">Color Converters</a>
       <a href="#news">Timestamp Converters</a>
       <a href="#news">Unit Converters</a>
-      <a href="#news">Number Base Converters</a>
+      <a href="./numberBase.html">Number Base Converters</a>
       <a href="#news">String Utilities</a>
     </div>
   </div>
