--- a/base64Decoder.html
+++ b/base64Decoder.html
@@ -13,29 +13,54 @@
 
 </head>
 <body>
-  <div class="navbar">
-    <a class="active" href="index.html">Utility Apps</a>
-    <div class="topnav-right">
-      <div class="dropdown">
-        <button class="dropbtn">Encoder/Decoder</button>
-        <div class="dropdown-content">
-          <a href="./encoderDecoder.html">URL/Encoder Decoder</a>
-          <a href="./base64Encoder.html">Base64 Encoder</a>
-          <a href="./base64Decoder.html">Base64 Decoder</a>
-          <a href="./md5Hash.html">MD-5 Hash Generator</a>
-          <a href="./sha1.html">SHA-1 Hash Generator</a>
-          <a href="./sha256.html">SHA-256 Hash Generator</a>
-          <a href="./sha512.html">SHA-512 Generator</a>
-        </div>
-      </div>
-      <a href="#news">Color Converters</a>
-      <a href="#news">Timestamp Converters</a>
-      <a href="#news">Unit Converters</a>
-      <a href="./numberBase.html">Number Base Converters</a>
-      <a href="#news">String Utilities</a>
-    </div>
-  </div>
+  <nav>
+    <p>Utility Apps</p>
+    <ul>
+    <li><a href="index.html">HOME</a>
+    <li><a href="#">Encoder/Decoder</a>
+        <ul>
+            <li><a href="./encoderDecoder.html">URL/Encoder Decoder</a></li>
+            <li><a href="./base64Encoder.html">Base64 Encoder</a></li>
+            <li><a href="./base64Decoder.html">Base64 Decoder</a></li>
+            <li><a href="./md5Hash.html">MD-5 Hash Generator</a></li>
+            <li><a href="./sha1.html">SHA-1 Hash Generator</a></li>
+            <li><a href="./sha256.html">SHA-256 Hash Generator</a></li>
+            <li><a href="./sha512.html">SHA-512 Generator</a></li>    
+        </ul>
+    </li>
+    <li><a href="#">Color Converters</a>
+        <ul>
+            <li><a href="./rgbToHEX.html">RGB to HEX</a></li>
+            <li><a href="./hexToRGB.html">HEX to RGB</a></li>  
+        </ul>
+    </li>
+    <li><a href="#">Time Utilities</a>
+        <ul>
+            <li><a href="#">Epoch Converter</a></li>
+            <li><a href="#">Timer</a></li>
+            <li><a href="#">Stop Watch</a></li>  
+        </ul>
+    </li>
+    <li><a href="#">Unit Converters</a></li>
+    <li><a href="./numberBase.html">Number Base Converters</a></li>
+    <li><a href="#">Text Utilities</a>
+        <ul>
+            <li><a href="#">Change Case</a></li>
+            <li><a href="#">String Count</a></li>
+            <li><a href="#">Translate</a></li>
+        </ul>
+    </li>
+    <li><a href="#">Extras</a>
+        <ul>
+            <li><a href="#">Clock</a></li>
+            <li><a href="#">IP Address</a></li>
+    
+        </ul>
+    </li>
+    </ul>
+    </nav>
 
+    
   <main>
     <div style="text-align: center;">
     <h2>Base 64 Decoder</h2>
