Fix-Orientation-after-Nav

--- a/base64Decoder.html
+++ b/base64Decoder.html
@@ -14,9 +14,8 @@
 </head>
 <body>
   <nav>
-    <p>Utility Apps</p>
+    <p><a href="index.html">Utility Apps</a></p>
     <ul>
-    <li><a href="index.html">HOME</a>
     <li><a href="#">Encoder/Decoder</a>
         <ul>
             <li><a href="./encoderDecoder.html">URL/Encoder Decoder</a></li>
@@ -59,7 +58,7 @@
     </li>
     </ul>
     </nav>
-
+    <br>
     
   <main>
     <div style="text-align: center;">
