--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
 </head>
 <body>
   <nav>
-    <p>Utility Apps</p>
+    <p><a href="index.html">Utility Apps</a></p>
     <ul>
-    <li><a href="index.html">HOME</a>
     <li><a href="#">Encoder/Decoder</a>
         <ul>
             <li><a href="./encoderDecoder.html">URL/Encoder Decoder</a></li>
@@ -24,7 +23,7 @@
             <li><a href="./md5Hash.html">MD-5 Hash Generator</a></li>
             <li><a href="./sha1.html">SHA-1 Hash Generator</a></li>
             <li><a href="./sha256.html">SHA-256 Hash Generator</a></li>
-            <li><a href="./sha512.html">SHA-512 Generator</a></li>    
+            <li><a href="./sha512.html">SHA-512 Hash Generator</a></li>    
         </ul>
     </li>
     <li><a href="#">Color Converters</a>
@@ -58,6 +57,7 @@
     </li>
     </ul>
     </nav>
+    <br>
     <h1>INDEX</h1>
 </body>
 </html>
