--- a/numberBase.html
+++ b/numberBase.html
@@ -12,9 +12,8 @@
 </head>
 <body>
   <nav>
-    <p>Utility Apps</p>
+    <p><a href="index.html">Utility Apps</a></p>
     <ul>
-    <li><a href="index.html">HOME</a>
     <li><a href="#">Encoder/Decoder</a>
         <ul>
             <li><a href="./encoderDecoder.html">URL/Encoder Decoder</a></li>
@@ -58,7 +57,7 @@
     
     </ul>
     </nav>
-
+    <br>
   <main>
     <div style="text-align: center;">
     <h2>Number Base Converters</h2>
