--- a/test.html
+++ b/test.html
@@ -9,18 +9,17 @@
 </head>
 <body>
 <nav>
-<p>Utility Apps</p>
+<p><a href="index.html">Utility Apps</a></p>
 <ul>
-<li><a href="index.html">HOME</a>
-<li><a href="#">Encoder/Decoder</a>
+<li><a href="#">Encoder/Decoder  </a>
     <ul>
-        <li><a href="./encoderDecoder.html">URL/Encoder Decoder</a></li>
+        <li><a href="./encoderDecoder.html">URL Encoder/Decoder</a></li>
         <li><a href="./base64Encoder.html">Base64 Encoder</a></li>
         <li><a href="./base64Decoder.html">Base64 Decoder</a></li>
         <li><a href="./md5Hash.html">MD-5 Hash Generator</a></li>
         <li><a href="./sha1.html">SHA-1 Hash Generator</a></li>
         <li><a href="./sha256.html">SHA-256 Hash Generator</a></li>
-        <li><a href="./sha512.html">SHA-512 Generator</a></li>    
+        <li><a href="./sha512.html">SHA-512 Hash Generator</a></li>    
     </ul>
 </li>
 <li><a href="#">Color Converters</a>
@@ -48,11 +47,10 @@
 <li><a href="#">Extras</a>
     <ul>
         <li><a href="#">Clock</a></li>
-        <li><a href="#">IP Address</a></li>
+        <li><a href="#">What's my IP?</a></li>
 
     </ul>
 </li>
-
 </ul>
 </nav>
 </body>
