--- a/encoderDecoder.html
+++ b/encoderDecoder.html
@@ -14,9 +14,8 @@
 </head>
 <body>
   <nav>
-    <p>Utility Apps</p>
+    <p><a href="index.html">Utility Apps</a></p>
     <ul>
-    <li><a href="index.html">HOME</a>
     <li><a href="#">Encoder/Decoder</a>
         <ul>
             <li><a href="./encoderDecoder.html">URL/Encoder Decoder</a></li>
@@ -60,7 +59,7 @@
     
     </ul>
     </nav>
-
+    <br>
   <main>
     <div style="text-align: center;">
     <h2>URL Encoder/Decoder</h2>
