--- a/hexToRGB.html
+++ b/hexToRGB.html
@@ -10,9 +10,8 @@
 </head>
 <body>
   <nav>
-    <p>Utility Apps</p>
+    <p><a href="index.html">Utility Apps</a></p>
     <ul>
-    <li><a href="index.html">HOME</a>
     <li><a href="#">Encoder/Decoder</a>
         <ul>
             <li><a href="./encoderDecoder.html">URL/Encoder Decoder</a></li>
@@ -56,7 +55,7 @@
     
     </ul>
     </nav>
-
+    <br>
     
     <div class="hexbox">    
       <label for="box">Enter 6 digit rgb value(#RRGGBB)</label>
