--- a/rgbToHEX.html
+++ b/rgbToHEX.html
@@ -11,9 +11,8 @@
 </head>
 <body>
   <nav>
-    <p>Utility Apps</p>
+    <p><a href="index.html">Utility Apps</a></p>
     <ul>
-    <li><a href="index.html">HOME</a>
     <li><a href="#">Encoder/Decoder</a>
         <ul>
             <li><a href="./encoderDecoder.html">URL/Encoder Decoder</a></li>
@@ -57,7 +56,7 @@
     
     </ul>
     </nav>
-    
+    <br>
   <div class="color-box">
     <div class="slider-box">
       Result: <input type="text"  id="box" value="rgb(255,255,255)">
