--- a/sha512.html
+++ b/sha512.html
@@ -11,9 +11,8 @@
 </head>
 <body>
   <nav>
-    <p>Utility Apps</p>
+    <p><a href="index.html">Utility Apps</a></p>
     <ul>
-    <li><a href="index.html">HOME</a>
     <li><a href="#">Encoder/Decoder</a>
         <ul>
             <li><a href="./encoderDecoder.html">URL/Encoder Decoder</a></li>
@@ -56,7 +55,7 @@
     </li>
     </ul>
     </nav>
-    
+    <br>
   <main>
     <div style="text-align: center;">
     <h2>SHA-512 Hash Generator</h2>
