language translation complete

--- a/hexToRGB.html
+++ b/hexToRGB.html
@@ -42,7 +42,7 @@
         <ul>
             <li><a href="#">Change Case</a></li>
             <li><a href="#">String Count</a></li>
-            <li><a href="#">Translate</a></li>
+            <li><a href="./languageTranslate.html">Translate</a></li>
         </ul>
     </li>
     <li><a href="#">Extras</a>
